--- a/.gitignore
+++ b/.gitignore
@@ -41,6 +41,8 @@ next-env.d.ts
 .genkit/*
 .env*
 
+
+
 # firebase
 firebase-debug.log
 firestore-debug.log
@@ -49,3 +51,5 @@ firestore-debug.log
 .env.local
 serviceAccountKey.json
 .env
+firebase-service-account.json
+
