--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,10 @@
 {
+  "rewrites": [
+    {
+      "source": "/api/(.*)",
+      "destination": "/api/proxy/$1"
+    }
+  ],
   "headers": [
     {
       "source": "/(.*)",
